--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
           requried="requried"
           class="nameinput"
         />
-        <!-- <h1 class="placeholder">이름을 알려주세요</h1> -->
         <input type="submit" value="Log in" class="hidden" />
       </form>
       <div class="input-underline"></div>
@@ -28,8 +27,10 @@
       <li id="digital-clock" class="main__item">00:00:00</li>
       <li id="todo" class="main__item">
         <form id="todo-form">
-          <input type="text" placeholder="to-do" />
+          <input type="text" placeholder="할일 목록" />
+          <div class="input-underline"></div>
         </form>
+
         <ul id="todo-list"></ul>
       </li>
       <li id="quote" class="main__item">
@@ -37,8 +38,9 @@
         <span></span>
       </li>
       <li id="weather" class="main__item">
-        <span></span>
-        <span></span>
+        <div class="weather-icon"></div>
+        <span class="weather-location"></span>
+        <span class="weather-data"></span>
       </li>
     </ul>
 
