--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/962c83be2b.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Rolllbj Titlepage</title>
   </head>
   <body>
@@ -38,7 +42,7 @@
         <span></span>
       </li>
       <li id="weather" class="main__item">
-        <div class="weather-icon"></div>
+        <div class="weather-icon sunny"></div>
         <span class="weather-location"></span>
         <span class="weather-data"></span>
       </li>
