Add greeting animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header id="greeting_name">
-      <h1 id="greeting" class="hidden center"></h1>
+      <h1 id="greeting" class="center"></h1>
       <form id="login-form" class="hidden center">
         <input
           maxlentgh="15"
@@ -23,8 +23,8 @@
           class="nameinput"
         />
         <input type="submit" value="Log in" class="hidden" />
+        <div class="input-underline"></div>
       </form>
-      <div class="input-underline"></div>
     </header>
 
     <ul id="main">
